Fixed x overflow

--- a/Lpage.css
+++ b/Lpage.css
@@ -11,6 +11,7 @@
 body{
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     height: 100%;
     color: #eee;
     background-color: #000;
